mas imagenes en el carrusel

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </head>
 
     <body>
-        <header>
-            <div class="header">
+        <header class="header">
+            <div class="container conf">
                 <a href="./index.html" class="logo">
                     <img src="./img/guitarra.png" alt="logo de pagina">
                     <h2>Guitarras Kiko</h2>
@@ -30,17 +30,17 @@
             </div>
         </header>
         <main>
-            <section class="container">
+            <section class="container"> 
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./img/fondodeindex.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/fondodeindex.png" class="d-block w-100" alt="...">
+                        <img src="./img/fondodeindex2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/fondodeindex.png" class="d-block w-100" alt="...">
+                        <img src="./img/fondodeindex3.png" class="d-block w-100" alt="...">
                     </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -57,7 +57,7 @@
             <section class="titulo">
                 <div class="contain">
                     <h1>TIENDA DE MUSICA</h1>
-                <h2>Somos una tienda dedicada a la venta de intrumentos y renta de equipos de sonido</h2>
+                    <h2>Somos una tienda dedicada a la venta de intrumentos y renta de equipos de sonido</h2>
                 </div>
             </section>
             
@@ -91,7 +91,7 @@
             <nav class="redes">
                 <ul>
                     <li class="copyright">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident amet nostrum! Earum perspiciatis commodi qui natus laudantium soluta. Eos eaque labore veniam reprehenderit hic explicabo provident quas est? Hic?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur omnis animi, recusandae libero odio maxime vero expedita magnam architecto praesentium necessitatibus, qui itaque adipisci, illo minima corporis at culpa porro excepturi nemo iusto odit? Ut similique asperiores rem eos corporis optio commodi nisi, obcaecati non quaerat, accusantium ducimus fugiat atque.</p>
                         <p>Copyright Kiko</p>
                     </li>
                 </ul>
