--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -11,8 +11,8 @@
     </head>
 
     <body>
-        <header>
-            <div class="header">
+        <header class="header">
+            <div class="container conf">
                 <a href="../index.html" class="logo">
                     <img src="../img/guitarra.png" alt="logo de pagina">
                     <h2>Guitarras Kiko</h2>
