--- a/pages/equipomusica.html
+++ b/pages/equipomusica.html
@@ -11,8 +11,8 @@
     </head>
 
     <body>
-        <header>
-            <div class="header">
+        <header class="header">
+            <div class="container conf">
                 <a href="../index.html" class="logo">
                     <img src="../img/guitarra.png" alt="logo de pagina">
                     <h2>Guitarras Kiko</h2>
@@ -39,24 +39,24 @@
             </section>
             
             <div class="equipos">
-                <div class="equipos1">
+                <div class="equipo">
                     <img src="../img/pedalera.png" alt="">
                     <div>
                         <h2>Pedalera ZOOM</h2>
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam aperiam illum dolor neque repellendus, ab ipsam magni aut voluptatum veniam.</h3>
                     </div>
                 </div>
-                <div class="equipos2">
+                <div class="equipo">
                     <img src="../img/amplificadorfender.png" alt="">
                     <div>
                         <h2>Amplificador Fender</h2>
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore atque minus, cumque soluta eaque optio maiores debitis illo adipisci quaerat inventore illum nisi enim fugiat eligendi eius itaque, cupiditate ipsum.</h3>
                     </div>
                 </div>
-                <div class="equipos3">
+                <div class="equipo">
                     <img src="../img/microfono.png" alt="">
                     <div>
-                        <h2>Microfono de estudio</h2>
+                        <h2>Microfono de estudioequipo
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolore laboriosam, saepe fugiat a ipsa adipisci modi impedit! Itaque ducimus libero asperiores reiciendis labore quis eveniet? Quisquam dolorem nostrum ea!</h3>
                     </div>
                 </div>
