reforma de verdad

--- a/pages/instrumentos.html
+++ b/pages/instrumentos.html
@@ -40,40 +40,46 @@
 
             <section class="container">
                 <div class="ventas">
-                    <div class="venta gibson">
+                    <div class="venta">
                         <img src="../img/guitarragibson.png" alt="gibson">
                         <div>
-                            <h2>Gibson Les Paul blanca</h2>
+                            <h3>Gibson Les Paul blanca</h3>
+                            <h4>$350.000</h4>
                         </div>
                     </div>
-                    <div class="venta strato">
+                    <div class="venta">
                         <img src="../img/guitarra-negra.png" alt="stratocaster">
                         <div>
-                            <h2>Stratocaster Negra</h2>
+                            <h3>Stratocaster Negra</h3>
+                            <h4>$225.000</h4>
                         </div>
                     </div>
-                    <div class="venta piano">
+                    <div class="venta">
                         <img src="../img/piano1.png" alt="piano1">
                         <div>
-                            <h2>Piano PXS 3000</h2>
+                            <h3>Piano PXS 3000</h3>
+                            <h4>$160.000</h4>
                         </div>
                     </div>
-                    <div class="venta bajo">
+                    <div class="venta">
                         <img src="../img/bajo1.png" alt="gibson">
                         <div>
-                            <h2>Bajo Fender</h2>
+                            <h3>Bajo Fender</h3>
+                            <h4>$200.000</h4>
                         </div>
                     </div>
-                    <div class="venta armonica">
+                    <div class="venta">
                         <img src="../img/armonica.png" alt="stratocaster">
                         <div>
-                            <h2>Armonica Fender (C)</h2>
+                            <h3>Armonica Fender (C)</h3>
+                            <h4>$50.000</h4>
                         </div>
                     </div>
-                    <div class="venta triangulo">
+                    <div class="venta">
                         <img src="../img/triangulo.png" alt="piano1">
                         <div>
-                            <h2>Triangulo cromado</h2>
+                            <h3>Triangulo cromado</h3>
+                            <h4>$15.000</h4>
                         </div>
                     </div>
                 </div>
