reforma bien hecha

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
                     </a>
                     <div class="ventas">
                         <div class="venta">
-                            <img src="../img/guitarragibson.png" alt="gibson">
+                            <img src="./img/guitarragibson.png" alt="gibson">
                             <div>
                                 <h3>Gibson Les Paul</h3>
                                 <h4>$750.000</h4>
                             </div>
                         </div>
                         <div class="venta">
-                            <img src="../img/guitarra-negra.png" alt="stratocaster">
+                            <img src="./img/guitarra-negra.png" alt="stratocaster">
                             <div>
                                 <h3>Stratocaster</h3>
                                 <h4>$525.000</h4>
