arreglos-en-instrumentos-y-equipos

--- a/pages/equipomusica.html
+++ b/pages/equipomusica.html
@@ -33,35 +33,100 @@
         <main>
             <section class="titulo">
                 <div class="contain">
-                    <h1>TIENDA DE MUSICA</h1>
-                <h2>Somos una tienda dedicada a la venta de intrumentos y renta de equipos de sonido</h2>
+                    <h1>EQUIPO PARA TU GUITARRA</h1>
+                <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos facilis tempora hic amet? Cumque quod ratione hic eveniet sed adipisci?</h2>
                 </div>
             </section>
             
-            <div class="equipos">
-                <div class="equipo">
-                    <img src="../img/pedalera.png" alt="">
+            <div class=" grilla-venta ventas">
+                <div class="venta1 venta">
+                    <img src="../img/ampli-code50.png" alt="">
                     <div>
-                        <h2>Pedalera ZOOM</h2>
-                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam aperiam illum dolor neque repellendus, ab ipsam magni aut voluptatum veniam.</h3>
+                        <h3>Code 50</h3>
+                        <h4>$550.000</h4>
                     </div>
                 </div>
-                <div class="equipo">
+                <div class="venta2 venta">
                     <img src="../img/amplificadorfender.png" alt="">
                     <div>
-                        <h2>Amplificador Fender</h2>
-                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore atque minus, cumque soluta eaque optio maiores debitis illo adipisci quaerat inventore illum nisi enim fugiat eligendi eius itaque, cupiditate ipsum.</h3>
+                        <h3>Champion 100</h3>
+                        <h4>$625.000</h4>
                     </div>
                 </div>
-                <div class="equipo">
+                <div class="venta3 venta">
+                    <img src="../img/cables-jack.png" alt="">
+                    <div>
+                        <h3>cables Jack</h3>
+                        <h4>$5.000</h4>
+                    </div>
+                </div>
+                <div class="venta4 venta">
+                    <img src="../img/pedal-riot.png" alt="">
+                    <div>
+                        <h3>Pedal Riot</h3>
+                        <h4>$50.000</h4>
+                    </div>
+                </div>
+                <div class="venta5 venta">
+                    <img src="../img/pedalera.png" alt="">
+                    <div>
+                        <h3>Pedalera ZOOM</h3>
+                        <h4>$700.000</h4>
+                    </div>
+                </div>
+                <div class="venta6 venta">
                     <img src="../img/microfono.png" alt="">
                     <div>
-                        <h2>Microfono de estudioequipo
-                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolore laboriosam, saepe fugiat a ipsa adipisci modi impedit! Itaque ducimus libero asperiores reiciendis labore quis eveniet? Quisquam dolorem nostrum ea!</h3>
+                        <h3>Microfono estudio</h3>
+                        <h4>$225.000</h4>
+                    </div>
+                </div>
+                <div class="venta7 venta">
+                    <img src="../img/pedalera.png" alt="">
+                    <div>
+                        <h3>Pedalera ZOOM</h3>
+                        <h4>$700.000</h4>
+                    </div>
+                </div>
+                <div class="venta8 venta">
+                    <img src="../img/microfono.png" alt="">
+                    <div>
+                        <h3>Microfono estudio</h3>
+                        <h4>$225.000</h4>
+                    </div>
+                </div>
+                <div class="venta9 venta">
+                    <img src="../img/pedalera.png" alt="">
+                    <div>
+                        <h3>Pedalera ZOOM</h3>
+                        <h4>$700.000</h4>
+                    </div>
+                </div>
+                <div class="venta10 venta">
+                    <img src="../img/microfono.png" alt="">
+                    <div>
+                        <h3>Microfono estudio</h3>
+                        <h4>$225.000</h4>
+                    </div>
+                </div>
+                <div class="venta11 venta">
+                    <img src="../img/pedalera.png" alt="">
+                    <div>
+                        <h3>Pedalera ZOOM</h3>
+                        <h4>$700.000</h4>
+                    </div>
+                </div>
+                <div class="venta12 venta">
+                    <img src="../img/microfono.png" alt="">
+                    <div>
+                        <h3>Microfono estudio</h3>
+                        <h4>$225.000</h4>
                     </div>
                 </div>
             </div>
         </main>
+
+            
 
         <footer>
             <nav class="redes">
