--- a/pages/instrumentos.html
+++ b/pages/instrumentos.html
@@ -33,57 +33,97 @@
         <main>
             <section class="titulo">
                 <div class="contain">
-                    <h1>TIENDA DE MUSICA</h1>
-                <h2>Somos una tienda dedicada a la venta de intrumentos y renta de equipos de sonido</h2>
+                    <h1>INSTRUMENTOS</h1>
+                <h2>Hay mucha variedad para que eligas el que mas deseés</h2>
                 </div>
             </section>
 
-            <section class="container">
-                <div class="ventas">
-                    <div class="venta">
-                        <img src="../img/guitarragibson.png" alt="gibson">
-                        <div>
-                            <h3>Gibson Les Paul blanca</h3>
-                            <h4>$350.000</h4>
-                        </div>
+            <div class=" grilla-venta ventas">
+                <div class="venta1 venta">
+                    <img src="../img/guitarragibson.png" alt="gibson">
+                    <div>
+                        <h3>Gibson Les Paul blanca</h3>
+                        <h4>$350.000</h4>
                     </div>
-                    <div class="venta">
-                        <img src="../img/guitarra-negra.png" alt="stratocaster">
-                        <div>
-                            <h3>Stratocaster Negra</h3>
-                            <h4>$225.000</h4>
-                        </div>
+                </div>
+                <div class="venta2 venta">
+                    <img src="../img/guitarra-negra.png" alt="stratocaster">
+                    <div>
+                        <h3>Stratocaster Negra</h3>
+                        <h4>$225.000</h4>
                     </div>
-                    <div class="venta">
-                        <img src="../img/piano1.png" alt="piano1">
-                        <div>
-                            <h3>Piano PXS 3000</h3>
-                            <h4>$160.000</h4>
-                        </div>
+                </div>
+                <div class="venta3 venta">
+                    <img src="../img/piano1.png" alt="piano1">
+                    <div>
+                        <h3>Piano PXS 3000</h3>
+                        <h4>$160.000</h4>
                     </div>
-                    <div class="venta">
-                        <img src="../img/bajo1.png" alt="gibson">
-                        <div>
-                            <h3>Bajo Fender</h3>
-                            <h4>$200.000</h4>
-                        </div>
+                </div>
+                <div class="venta4 venta">
+                    <img src="../img/bajo1.png" alt="gibson">
+                    <div>
+                        <h3>Bajo Fender</h3>
+                        <h4>$200.000</h4>
                     </div>
-                    <div class="venta">
-                        <img src="../img/armonica.png" alt="stratocaster">
+                </div>
+                <div class="venta5 venta">
+                    <img src="../img/armonica.png" alt="stratocaster">
                         <div>
                             <h3>Armonica Fender (C)</h3>
                             <h4>$50.000</h4>
                         </div>
-                    </div>
-                    <div class="venta">
-                        <img src="../img/triangulo.png" alt="piano1">
-                        <div>
-                            <h3>Triangulo cromado</h3>
-                            <h4>$15.000</h4>
-                        </div>
+                </div>
+                <div class="venta6 venta">
+                    <img src="../img/triangulo.png" alt="piano1">
+                    <div>
+                        <h3>Triangulo cromado</h3>
+                        <h4>$15.000</h4>
                     </div>
                 </div>
-            </section>
+                <div class="venta7 venta">
+                    <img src="../img/pedalera.png" alt="">
+                    <div>
+                        <h3>Pedalera ZOOM</h3>
+                        <h4>$700.000</h4>
+                    </div>
+                </div>
+                <div class="venta8 venta">
+                    <img src="../img/microfono.png" alt="">
+                    <div>
+                        <h3>Microfono estudio</h3>
+                        <h4>$225.000</h4>
+                    </div>
+                </div>
+                <div class="venta9 venta">
+                    <img src="../img/pedalera.png" alt="">
+                    <div>
+                        <h3>Pedalera ZOOM</h3>
+                        <h4>$700.000</h4>
+                    </div>
+                </div>
+                <div class="venta10 venta">
+                    <img src="../img/microfono.png" alt="">
+                    <div>
+                        <h3>Microfono estudio</h3>
+                        <h4>$225.000</h4>
+                    </div>
+                </div>
+                <div class="venta11 venta">
+                    <img src="../img/pedalera.png" alt="">
+                    <div>
+                        <h3>Pedalera ZOOM</h3>
+                        <h4>$700.000</h4>
+                    </div>
+                </div>
+                <div class="venta12 venta">
+                    <img src="../img/microfono.png" alt="">
+                    <div>
+                        <h3>Microfono estudio</h3>
+                        <h4>$225.000</h4>
+                    </div>
+                </div>
+            </div>
             
         </main>
 
