boton agregado y hover, segunda entrega

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <ul>
                     <li class="copyright">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur omnis animi, recusandae libero odio maxime vero expedita magnam architecto praesentium necessitatibus, qui itaque adipisci, illo minima corporis at culpa porro excepturi nemo iusto odit? Ut similique asperiores rem eos corporis optio commodi nisi, obcaecati non quaerat, accusantium ducimus fugiat atque.</p>
-                        <p>Copyright Kiko</p>
+                        <p>Copyright © Kiko</p>
                     </li>
                 </ul>
                 <ul>
