--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -51,6 +51,9 @@
                         <p>Asunto :</p>
                         <textarea cols="30" rows="10" placeholder="Comentario"></textarea>
                     </li>
+                    <li>
+                        <button>Enviar</button>
+                    </li>
                 </ul>
             </div>
         </main>
@@ -59,7 +62,7 @@
                 <ul>
                     <li class="copyright">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident amet nostrum! Earum perspiciatis commodi qui natus laudantium soluta. Eos eaque labore veniam reprehenderit hic explicabo provident quas est? Hic?</p>
-                        <p>Copyright Kiko</p>
+                        <p>Copyright © Kiko</p>
                     </li>
                 </ul>
                 <ul>
