--- a/pages/instrumentos.html
+++ b/pages/instrumentos.html
@@ -132,7 +132,7 @@
                 <ul>
                     <li class="copyright">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident amet nostrum! Earum perspiciatis commodi qui natus laudantium soluta. Eos eaque labore veniam reprehenderit hic explicabo provident quas est? Hic?</p>
-                        <p>Copyright Kiko</p>
+                        <p>Copyright © Kiko</p>
                     </li>
                 </ul>
                 <ul>
