--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <title>Guitarras Kiko</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-            <link rel="stylesheet" href="./css/style.css">
+            <link rel="stylesheet" href="./css/estilo.css">
     </head>
 
     <body>
@@ -61,7 +61,7 @@
                 </div>
             </section>
             
-            <section class="fondo-index">
+            <section class="fondo-img">
                 <div class="container grilla-index">
                     <!--INSTRUMENTOS-->
                     <a class="logo-instrumentos-grid" href="./pages/instrumentos.html">
@@ -137,8 +137,8 @@
             <nav class="redes">
                 <ul>
                     <li class="copyright">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur omnis animi, recusandae libero odio maxime vero expedita magnam architecto praesentium necessitatibus, qui itaque adipisci, illo minima corporis at culpa porro excepturi nemo iusto odit? Ut similique asperiores rem eos corporis optio commodi nisi, obcaecati non quaerat, accusantium ducimus fugiat atque.</p>
-                        <p>Copyright © Kiko</p>
+                        <p>Guitarras Kiko se esfuerza por proporcionar experiencias de compra sin igual, respaldadas por un servicio al cliente excepcional. Descubre el mundo de la música con nosotros y deja que Guitarras Kiko sea tu compañero musical confiable.</p>
+                        <p>© 2023-2024 Guitarras Kiko</p>
                     </li>
                 </ul>
                 <ul>
