un poco de lo mismo

--- a/pages/equipomusica.html
+++ b/pages/equipomusica.html
@@ -132,8 +132,8 @@
             <nav class="redes">
                 <ul>
                     <li class="copyright">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident amet nostrum! Earum perspiciatis commodi qui natus laudantium soluta. Eos eaque labore veniam reprehenderit hic explicabo provident quas est? Hic?</p>
-                        <p>Copyright © Kiko</p>
+                        <p>Guitarras Kiko se esfuerza por proporcionar experiencias de compra sin igual, respaldadas por un servicio al cliente excepcional. Descubre el mundo de la música con nosotros y deja que Guitarras Kiko sea tu compañero musical confiable.</p>
+                        <p>© 2023-2024 Guitarras Kiko</p>
                     </li>
                 </ul>
                 <ul>
