--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -52,7 +52,7 @@
                         <textarea cols="30" rows="10" placeholder="Comentario"></textarea>
                     </li>
                     <li>
-                        <button>Enviar</button>
+                        <button role="button" class="button-name">Enviar</button>
                     </li>
                 </ul>
             </div>
