--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,27 +30,27 @@
             </div>
         </header>
 
-        <main>
-            <div class="nosotros">
-                <div>
-                    <div class="empleados">
-                        <h3>Nuestro equipo:</h3>
-                        <img src="../img/empleados.png" alt="">
-                    </div>
-                    <div class="subtexto">
-                        <h3>Sobre nosotros:</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam quidem, perspiciatis ipsum blanditiis quam architecto temporibus consequatur dolor voluptatum. Labore quibusdam tempora, tenetur nostrum placeat iste sit voluptatibus modi, possimus eveniet incidunt quo fugit cumque? Eaque, numquam autem corrupti dolorum fuga ducimus sapiente quam laboriosam, adipisci vel doloribus, non possimus? Obcaecati accusamus corrupti voluptates unde in dignissimos repellendus totam repellat consequuntur eveniet magni consectetur quaerat nobis nesciunt explicabo alias labore, veniam quas veritatis aperiam quos. Iure voluptatem cum repudiandae corporis quaerat.</p>
-                    </div>
+    
+        <main class="nosotros">
+            <ul>
+                <div class="empleados">
+                    <h3>Nuestro equipo:</h3>
+                    <img src="../img/empleados.png" alt="">
                 </div>
-            </div>
+                <div class="subtexto">
+                    <h3>Sobre nosotros:</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam quidem, perspiciatis ipsum blanditiis quam architecto temporibus consequatur dolor voluptatum. Labore quibusdam tempora, tenetur nostrum placeat iste sit voluptatibus modi, possimus eveniet incidunt quo fugit cumque? Eaque, numquam autem corrupti dolorum fuga ducimus sapiente quam laboriosam, adipisci vel doloribus, non possimus? Obcaecati accusamus corrupti voluptates unde in dignissimos repellendus totam repellat consequuntur eveniet magni consectetur quaerat nobis nesciunt explicabo alias labore, veniam quas veritatis aperiam quos. Iure voluptatem cum repudiandae corporis quaerat.</p>
+                </div>
+            </ul>
         </main>
+    
 
         <footer>
             <nav class="redes">
                 <ul>
                     <li class="copyright">
-                        <p>Guitarras Kiko se esfuerza por proporcionar experiencias de compra sin igual, respaldadas por un servicio al cliente excepcional. Descubre el mundo de la música con nosotros y deja que Guitarras Kiko sea tu compañero musical confiable.</p>
-                        <p>© 2023-2024 Guitarras Kiko</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident amet nostrum! Earum perspiciatis commodi qui natus laudantium soluta. Eos eaque labore veniam reprehenderit hic explicabo provident quas est? Hic?</p>
+                        <p>Copyright © Kiko</p>
                     </li>
                 </ul>
                 <ul>
