agregue los alt de las img, arreglo de index grilla, cambie los lorems y arreglos de h2,h2,h3 y h4

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <header class="header">
             <div class="container conf">
                 <a href="./index.html" class="logo">
-                    <img src="./img/guitarra.png" alt="logo de pagina">
-                    <h2>Guitarras Kiko</h2>
+                    <img src="./img/guitarra.png" alt="logo-header">
+                    <h1>Guitarras Kiko</h1>
                 </a>
                 <nav>
                     <ul>
@@ -34,13 +34,13 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/fondodeindex.png" class="d-block w-100" alt="...">
+                        <img src="./img/fondodeindex.png" class="d-block w-100" alt="fondo1-carrusel">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/fondodeindex2.png" class="d-block w-100" alt="...">
+                        <img src="./img/fondodeindex2.png" class="d-block w-100" alt="fondo2-carrusel">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/fondodeindex3.png" class="d-block w-100" alt="...">
+                        <img src="./img/fondodeindex3.png" class="d-block w-100" alt="fondo3-carrusel">
                     </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -65,18 +65,18 @@
                 <div class="container grilla-index">
                     <!--INSTRUMENTOS-->
                     <a class="logo-instrumentos-grid" href="./pages/instrumentos.html">
-                        <img src="./img/fondofender.png" alt="">
+                        <img src="./img/fondofender.png" alt="guitarras-enlace-index">
                     </a>
                     <div class="ventas">
                         <div class="venta">
-                            <img src="./img/guitarragibson.png" alt="gibson">
+                            <img src="./img/guitarragibson.png" alt="gibson-index">
                             <div>
                                 <h3>Gibson Les Paul</h3>
                                 <h4>$750.000</h4>
                             </div>
                         </div>
                         <div class="venta">
-                            <img src="./img/guitarra-negra.png" alt="stratocaster">
+                            <img src="./img/guitarra-negra.png" alt="stratocaster-index">
                             <div>
                                 <h3>Stratocaster</h3>
                                 <h4>$525.000</h4>
@@ -86,14 +86,14 @@
                     <!--PEDALES-Y-MICROFONOS-->
                     <div class="ventas2">
                         <div class="venta">
-                            <img src="./img/microfono.png" alt="microfono">
+                            <img src="./img/microfono.png" alt="microfono-index">
                             <div>
                                 <h3>Microfono</h3>
                                 <h4>$75.000</h4>
                             </div>
                         </div>
                         <div class="venta">
-                            <img src="./img/pedalera.png" alt="pedal">
+                            <img src="./img/pedalera.png" alt="pedal-index">
                             <div>
                                 <h3>Pedalera</h3>
                                 <h4>$150.000</h4>
@@ -101,22 +101,22 @@
                         </div>
                     </div>
                     <a class="logo-pedal-grid" href="./pages/equipomusica.html">
-                        <img src="./img/grilla-pedal.png" alt="">
+                        <img src="./img/grilla-pedal.png" alt="pedalera-enlace-index">
                     </a>
                     <!--AMPLIFICADORES-->
                     <a class="logo-amplificador-grid" href="./pages/equipomusica.html">
-                        <img src="./img/grilla-ampli.png" alt="">
+                        <img src="./img/grilla-ampli.png" alt="ampli-enlace-index">
                     </a>
                     <div class="ventas3">
                         <div class="venta">
-                            <img src="./img/ampli-code50.png" alt="ampli-marshal">
+                            <img src="./img/ampli-code50.png" alt="ampli-marshal-index">
                             <div>
                                 <h3>Code 50</h3>
                                 <h4>$550.000</h4>
                             </div>
                         </div>
                         <div class="venta">
-                            <img src="./img/amplificadorfender.png" alt="ampli-fender">
+                            <img src="./img/amplificadorfender.png" alt="ampli-fender-index">
                             <div>
                                 <h3>Champion 100</h3>
                                 <h4>$625.000</h4>
@@ -144,11 +144,11 @@
                 <ul>
                     <li class="redesint">
                         <a href="https://www.instagram.com/?hl=es-la" target="_blank">
-                            <img src="./img/instagramicon.png" alt="">
+                            <img src="./img/instagramicon.png" alt="logo-instagram">
                             <h3>Instagram</h3>
                         </a>
                         <a href="https://www.facebook.com/" target="_blank">
-                            <img src="./img/facebookicon.png" alt="">
+                            <img src="./img/facebookicon.png" alt="logo-facebook">
                             <h3>Facebook</h3>
                         </a>
                     </li>
