--- a/pages/instrumentos.html
+++ b/pages/instrumentos.html
@@ -3,7 +3,7 @@
     <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="shortcut icon" href="./img/guitarra.png">
+            <link rel="shortcut icon" href="../img/guitarra.png">
             <title>Guitarras Kiko</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -14,8 +14,8 @@
         <header class="header">
             <div class="container conf">
                 <a href="../index.html" class="logo">
-                    <img src="../img/guitarra.png" alt="logo de pagina">
-                    <h2>Guitarras Kiko</h2>
+                    <img src="../img/guitarra.png" alt="logo-header">
+                    <h1>Guitarras Kiko</h1>
                 </a>
                 <nav>
                     <ul>
@@ -34,7 +34,7 @@
             <section class="titulo">
                 <div class="contain">
                     <h1>INSTRUMENTOS</h1>
-                <h2>Hay mucha variedad para que eligas el que mas deseés</h2>
+                    <h2>"Guitarras que inspiran, melodías que perduran"</h2>
                 </div>
             </section>
 
@@ -82,14 +82,14 @@
                     </div>
                 </div>
                 <div class="venta7 venta">
-                    <img src="../img/pedalera.png" alt="">
+                    <img src="../img/pedalera.png" alt="pedal">
                     <div>
                         <h3>Pedalera ZOOM</h3>
                         <h4>$700.000</h4>
                     </div>
                 </div>
                 <div class="venta8 venta">
-                    <img src="../img/microfono.png" alt="">
+                    <img src="../img/microfono.png" alt="microfono">
                     <div>
                         <h3>Microfono estudio</h3>
                         <h4>$225.000</h4>
@@ -138,11 +138,11 @@
                 <ul>
                     <li class="redesint">
                         <a href="https://www.instagram.com/?hl=es-la" target="_blank">
-                            <img src="../img/instagramicon.png" alt="">
+                            <img src="../img/instagramicon.png" alt="logo-instagram">
                             <h3>Instagram</h3>
                         </a>
                         <a href="https://www.facebook.com/" target="_blank">
-                            <img src="../img/facebookicon.png" alt="">
+                            <img src="../img/facebookicon.png" alt="logo-facebook">
                             <h3>Facebook</h3>
                         </a>
                     </li>
