--- a/pages/equipomusica.html
+++ b/pages/equipomusica.html
@@ -3,7 +3,7 @@
     <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="shortcut icon" href="./img/guitarra.png">
+            <link rel="shortcut icon" href="../img/guitarra.png">
             <title>Guitarras Kiko</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -14,8 +14,8 @@
         <header class="header">
             <div class="container conf">
                 <a href="../index.html" class="logo">
-                    <img src="../img/guitarra.png" alt="logo de pagina">
-                    <h2>Guitarras Kiko</h2>
+                    <img src="../img/guitarra.png" alt="logo-header">
+                    <h1>Guitarras Kiko</h1>
                 </a>
                 <nav>
                     <ul>
@@ -34,48 +34,48 @@
             <section class="titulo">
                 <div class="contain">
                     <h1>EQUIPO PARA TU GUITARRA</h1>
-                <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos facilis tempora hic amet? Cumque quod ratione hic eveniet sed adipisci?</h2>
+                    <h2>"El sonido que mereces, a tu alcance"</h2>
                 </div>
             </section>
             
             <div class=" grilla-venta ventas">
                 <div class="venta1 venta">
-                    <img src="../img/ampli-code50.png" alt="">
+                    <img src="../img/ampli-code50.png" alt="code50">
                     <div>
                         <h3>Code 50</h3>
                         <h4>$550.000</h4>
                     </div>
                 </div>
                 <div class="venta2 venta">
-                    <img src="../img/amplificadorfender.png" alt="">
+                    <img src="../img/amplificadorfender.png" alt="champ100">
                     <div>
                         <h3>Champion 100</h3>
                         <h4>$625.000</h4>
                     </div>
                 </div>
                 <div class="venta3 venta">
-                    <img src="../img/cables-jack.png" alt="">
+                    <img src="../img/cables-jack.png" alt="cables-jack">
                     <div>
                         <h3>cables Jack</h3>
                         <h4>$5.000</h4>
                     </div>
                 </div>
                 <div class="venta4 venta">
-                    <img src="../img/pedal-riot.png" alt="">
+                    <img src="../img/pedal-riot.png" alt="pedalera-riot">
                     <div>
                         <h3>Pedal Riot</h3>
                         <h4>$50.000</h4>
                     </div>
                 </div>
                 <div class="venta5 venta">
-                    <img src="../img/pedalera.png" alt="">
+                    <img src="../img/pedalera.png" alt="pedal">
                     <div>
                         <h3>Pedalera ZOOM</h3>
                         <h4>$700.000</h4>
                     </div>
                 </div>
                 <div class="venta6 venta">
-                    <img src="../img/microfono.png" alt="">
+                    <img src="../img/microfono.png" alt="microfono">
                     <div>
                         <h3>Microfono estudio</h3>
                         <h4>$225.000</h4>
@@ -139,11 +139,11 @@
                 <ul>
                     <li class="redesint">
                         <a href="https://www.instagram.com/?hl=es-la" target="_blank">
-                            <img src="../img/instagramicon.png" alt="">
+                            <img src="../img/instagramicon.png" alt="logo-instagram">
                             <h3>Instagram</h3>
                         </a>
                         <a href="https://www.facebook.com/" target="_blank">
-                            <img src="../img/facebookicon.png" alt="">
+                            <img src="../img/facebookicon.png" alt="logo-facebook">
                             <h3>Facebook</h3>
                         </a>
                     </li>
