--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,7 @@
     <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="shortcut icon" href="./img/guitarra.png">
+            <link rel="shortcut icon" href="../img/guitarra.png">
             <title>Guitarras Kiko</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -14,8 +14,8 @@
         <header class="header">
             <div class="container conf">
                 <a href="../index.html" class="logo">
-                    <img src="../img/guitarra.png" alt="logo de pagina">
-                    <h2>Guitarras Kiko</h2>
+                    <img src="../img/guitarra.png" alt="logo-header">
+                    <h1>Guitarras Kiko</h1>
                 </a>
                 <nav>
                     <ul>
@@ -35,11 +35,12 @@
             <ul>
                 <div class="empleados">
                     <h3>Nuestro equipo:</h3>
-                    <img src="../img/empleados.png" alt="">
+                    <img src="../img/empleados.png" alt="img-empleados">
                 </div>
                 <div class="subtexto">
                     <h3>Sobre nosotros:</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam quidem, perspiciatis ipsum blanditiis quam architecto temporibus consequatur dolor voluptatum. Labore quibusdam tempora, tenetur nostrum placeat iste sit voluptatibus modi, possimus eveniet incidunt quo fugit cumque? Eaque, numquam autem corrupti dolorum fuga ducimus sapiente quam laboriosam, adipisci vel doloribus, non possimus? Obcaecati accusamus corrupti voluptates unde in dignissimos repellendus totam repellat consequuntur eveniet magni consectetur quaerat nobis nesciunt explicabo alias labore, veniam quas veritatis aperiam quos. Iure voluptatem cum repudiandae corporis quaerat.</p>
+                    <p>Cada miembro de nuestro equipo posee un profundo conocimiento sobre una amplia variedad de guitarras, desde las clásicas hasta las más contemporáneas. Somos músicos apasionados que comprendemos la importancia de encontrar el instrumento adecuado. Estamos aquí para compartir nuestra pasión por la música contigo y ayudarte a encontrar la guitarra de tus sueños que te inspire a crear música hermosa y significativa.
+                    </p>
                 </div>
             </ul>
         </main>
@@ -49,18 +50,18 @@
             <nav class="redes">
                 <ul>
                     <li class="copyright">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet provident amet nostrum! Earum perspiciatis commodi qui natus laudantium soluta. Eos eaque labore veniam reprehenderit hic explicabo provident quas est? Hic?</p>
+                        <p>Guitarras Kiko se esfuerza por proporcionar experiencias de compra sin igual, respaldadas por un servicio al cliente excepcional. Descubre el mundo de la música con nosotros y deja que Guitarras Kiko sea tu compañero musical confiable.</p>
                         <p>Copyright © Kiko</p>
                     </li>
                 </ul>
                 <ul>
                     <li class="redesint">
                         <a href="https://www.instagram.com/?hl=es-la" target="_blank">
-                            <img src="../img/instagramicon.png" alt="">
+                            <img src="../img/instagramicon.png" alt="logo-instagram">
                             <h3>Instagram</h3>
                         </a>
                         <a href="https://www.facebook.com/" target="_blank">
-                            <img src="../img/facebookicon.png" alt="">
+                            <img src="../img/facebookicon.png" alt="logo-facebook">
                             <h3>Facebook</h3>
                         </a>
                     </li>
