--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="shortcut icon" href="./img/guitarra.png">
-            <title>Guitarras Kiko</title>
+            <title>Guitarras Kiko | Explora el Mundo de la Música</title>
+            <meta name="description" content="Descubre una amplia selección de guitarras, equipo musical y servicios de alquiler de equipos en nuestra tienda en línea. Encuentra la guitarra de tus sueños, amplificadores potentes, micrófonos de calidad profesional y más para llevar tu música al siguiente nivel. También ofrecemos servicios de alquiler de equipos para eventos y actuaciones en vivo. Explora nuestra colección y haz realidad tus proyectos musicales con nosotros.">
+            <meta name="keywords" content="tienda de música, instrumentos musicales, equipos de audio, atención al cliente, venta de instrumentos">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="./css/estilo.css">
+            
     </head>
 
     <body>
@@ -34,13 +37,13 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/fondodeindex.png" class="d-block w-100" alt="fondo1-carrusel">
+                        <img src="./img/fondodeindex.jpg" class="d-block w-100" alt="fondo1-carrusel">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/fondodeindex2.png" class="d-block w-100" alt="fondo2-carrusel">
+                        <img src="./img/fondodeindex2.jpg" class="d-block w-100" alt="fondo2-carrusel">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/fondodeindex3.png" class="d-block w-100" alt="fondo3-carrusel">
+                        <img src="./img/fondodeindex3.jpg" class="d-block w-100" alt="fondo3-carrusel">
                     </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -65,7 +68,7 @@
                 <div class="container grilla-index">
                     <!--INSTRUMENTOS-->
                     <a class="logo-instrumentos-grid" href="./pages/instrumentos.html">
-                        <img src="./img/fondofender.png" alt="guitarras-enlace-index">
+                        <img src="./img/fondofender.jpg" alt="guitarras-enlace-index">
                     </a>
                     <div class="ventas">
                         <div class="venta">
@@ -101,11 +104,11 @@
                         </div>
                     </div>
                     <a class="logo-pedal-grid" href="./pages/equipomusica.html">
-                        <img src="./img/grilla-pedal.png" alt="pedalera-enlace-index">
+                        <img src="./img/grilla-pedal.jpg" alt="pedalera-enlace-index">
                     </a>
                     <!--AMPLIFICADORES-->
                     <a class="logo-amplificador-grid" href="./pages/equipomusica.html">
-                        <img src="./img/grilla-ampli.png" alt="ampli-enlace-index">
+                        <img src="./img/grilla-ampli.jpg" alt="ampli-enlace-index">
                     </a>
                     <div class="ventas3">
                         <div class="venta">
