--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,7 +4,9 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="shortcut icon" href="../img/guitarra.png">
-            <title>Guitarras Kiko</title>
+            <title>Contactos</title>
+            <meta name="description" content="¡Nos encantaría escucharte! Ponte en contacto con nuestro equipo de atención al cliente para cualquier consulta, comentario o solicitud de información sobre nuestros productos y servicios. Ya sea que estés buscando asesoramiento sobre instrumentos musicales, ayuda con una compra o información sobre nuestros servicios, estamos aquí para ayudarte. Completa nuestro formulario de contacto o encuentra nuestros detalles de contacto y haznos saber cómo podemos ayudarte a satisfacer tus necesidades musicales.">
+            <meta name="keywords" content="contacto, servicio al cliente, atención al cliente, consultas, soporte">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="../css/estilo.css">
