--- a/pages/instrumentos.html
+++ b/pages/instrumentos.html
@@ -4,7 +4,9 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="shortcut icon" href="../img/guitarra.png">
-            <title>Guitarras Kiko</title>
+            <title>Instrumentos</title>
+            <meta name="description" content="Explora nuestra amplia selección de instrumentos musicales en venta, que incluye guitarras eléctricas, acústicas y bajos para todos los niveles de habilidad. También ofrecemos pianos digitales, teclados, baterías y una variedad de instrumentos de viento y percusión. Encuentra el instrumento perfecto para expresar tu creatividad musical y llevar tu arte al siguiente nivel.">
+            <meta name="keywords" content="guitarras, bajos, pianos, instrumentos musicales, tienda de música">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="../css/estilo.css">
@@ -38,92 +40,95 @@
                 </div>
             </section>
 
-            <div class=" grilla-venta ventas">
-                <div class="venta1 venta">
-                    <img src="../img/guitarragibson.png" alt="gibson">
-                    <div>
-                        <h3>Gibson Les Paul blanca</h3>
-                        <h4>$350.000</h4>
-                    </div>
-                </div>
-                <div class="venta2 venta">
-                    <img src="../img/guitarra-negra.png" alt="stratocaster">
-                    <div>
-                        <h3>Stratocaster Negra</h3>
-                        <h4>$225.000</h4>
-                    </div>
-                </div>
-                <div class="venta3 venta">
-                    <img src="../img/piano1.png" alt="piano1">
-                    <div>
-                        <h3>Piano PXS 3000</h3>
-                        <h4>$160.000</h4>
-                    </div>
-                </div>
-                <div class="venta4 venta">
-                    <img src="../img/bajo1.png" alt="gibson">
-                    <div>
-                        <h3>Bajo Fender</h3>
-                        <h4>$200.000</h4>
-                    </div>
-                </div>
-                <div class="venta5 venta">
-                    <img src="../img/armonica.png" alt="stratocaster">
+            <section class="fondo-instrumentos">
+                <div class=" grilla-venta ventas">
+                    <div class="venta1 venta">
+                        <img src="../img/guitarragibson.png" alt="gibson">
                         <div>
-                            <h3>Armonica Fender (C)</h3>
-                            <h4>$50.000</h4>
+                            <h3>Gibson Les Paul blanca</h3>
+                            <h4>$350.000</h4>
                         </div>
-                </div>
-                <div class="venta6 venta">
-                    <img src="../img/triangulo.png" alt="piano1">
-                    <div>
-                        <h3>Triangulo cromado</h3>
-                        <h4>$15.000</h4>
+                    </div>
+                    <div class="venta2 venta">
+                        <img src="../img/guitarra-negra.png" alt="stratocaster">
+                        <div>
+                            <h3>Stratocaster Negra</h3>
+                            <h4>$225.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta3 venta">
+                        <img src="../img/piano1.png" alt="piano1">
+                        <div>
+                            <h3>Piano PXS 3000</h3>
+                            <h4>$160.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta4 venta">
+                        <img src="../img/bajo1.png" alt="gibson">
+                        <div>
+                            <h3>Bajo Fender</h3>
+                            <h4>$200.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta5 venta">
+                        <img src="../img/armonica.png" alt="stratocaster">
+                            <div>
+                                <h3>Armonica Fender (C)</h3>
+                                <h4>$50.000</h4>
+                            </div>
+                    </div>
+                    <div class="venta6 venta">
+                        <img src="../img/triangulo.png" alt="piano1">
+                        <div>
+                            <h3>Triangulo cromado</h3>
+                            <h4>$15.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta7 venta">
+                        <img src="../img/guitarra-ibanez.png" alt="guitarra-ibanez">
+                        <div>
+                            <h3>Guitarra Ibanez</h3>
+                            <h4>$1.600.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta8 venta">
+                        <img src="../img/bajo-newport.png" alt="bajo-newport">
+                        <div>
+                            <h3>Bajo Newport</h3>
+                            <h4>$955.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta9 venta">
+                        <img src="../img/bajo-gibson.png" alt="bajo-gibson">
+                        <div>
+                            <h3>Bajo Gibson</h3>
+                            <h4>$1.400.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta10 venta">
+                        <img src="../img/melodica.png" alt="melodica">
+                        <div>
+                            <h3>Melodica</h3>
+                            <h4>$45.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta11 venta">
+                        <img src="../img/bateria.png" alt="bateria">
+                        <div>
+                            <h3>Bateria Electrica</h3>
+                            <h4>$3.400.000</h4>
+                        </div>
+                    </div>
+                    <div class="venta12 venta">
+                        <img src="../img/guitarra-jaguar.png" alt="guitarra-jaguar">
+                        <div>
+                            <h3>Guitarra Jaguar</h3>
+                            <h4>$1.500.000</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="venta7 venta">
-                    <img src="../img/pedalera.png" alt="pedal">
-                    <div>
-                        <h3>Pedalera ZOOM</h3>
-                        <h4>$700.000</h4>
-                    </div>
-                </div>
-                <div class="venta8 venta">
-                    <img src="../img/microfono.png" alt="microfono">
-                    <div>
-                        <h3>Microfono estudio</h3>
-                        <h4>$225.000</h4>
-                    </div>
-                </div>
-                <div class="venta9 venta">
-                    <img src="../img/pedalera.png" alt="">
-                    <div>
-                        <h3>Pedalera ZOOM</h3>
-                        <h4>$700.000</h4>
-                    </div>
-                </div>
-                <div class="venta10 venta">
-                    <img src="../img/microfono.png" alt="">
-                    <div>
-                        <h3>Microfono estudio</h3>
-                        <h4>$225.000</h4>
-                    </div>
-                </div>
-                <div class="venta11 venta">
-                    <img src="../img/pedalera.png" alt="">
-                    <div>
-                        <h3>Pedalera ZOOM</h3>
-                        <h4>$700.000</h4>
-                    </div>
-                </div>
-                <div class="venta12 venta">
-                    <img src="../img/microfono.png" alt="">
-                    <div>
-                        <h3>Microfono estudio</h3>
-                        <h4>$225.000</h4>
-                    </div>
-                </div>
-            </div>
+            </section>
+            
             
         </main>
 
