--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,9 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="shortcut icon" href="../img/guitarra.png">
-            <title>Guitarras Kiko</title>
+            <title>Nosotros</title>
+            <meta name="description" content="Conoce al equipo apasionado y dedicado detrás de nuestra tienda de música. Nuestro equipo está formado por expertos músicos y entusiastas de la música comprometidos a brindarte la mejor experiencia musical. Desde asesoramiento experto en la selección de instrumentos hasta un servicio al cliente excepcional, estamos aquí para ayudarte a encontrar el instrumento perfecto y hacer que tu experiencia musical sea memorable.">
+            <meta name="keywords" content="equipo de la tienda, músicos, expertos en música, atención al cliente, pasión por la música">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="../css/estilo.css">
@@ -35,7 +37,7 @@
             <ul>
                 <div class="empleados">
                     <h3>Nuestro equipo:</h3>
-                    <img src="../img/empleados.png" alt="img-empleados">
+                    <img src="../img/empleados.jpg" alt="img-empleados">
                 </div>
                 <div class="subtexto">
                     <h3>Sobre nosotros:</h3>
