agregue menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
                     <img src="./img/guitarra.png" alt="logo-header">
                     <h1>Guitarras Kiko</h1>
                 </a>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="./pages/instrumentos.html">Instrumentos</a>
-                            <a href="./pages/equipomusica.html">Equipos</a>
-                            <a href="./pages/nosotros.html">Nosotros</a>
-                            <a href="./pages/contactanos.html">Contactanos</a>
-                        </li>
-                    </ul>
+                <input type="checkbox" id="check">
+                <label for="check" class="mostrar-menu">
+                    &#8801
+                </label>
+                <nav class="menu">
+                    <a href="./pages/instrumentos.html">Instrumentos</a>
+                    <a href="./pages/equipomusica.html">Equipos</a>
+                    <a href="./pages/nosotros.html">Nosotros</a>
+                    <a href="./pages/contactanos.html">Contactanos</a>
+                    <label for="check" class="esconder-menu">
+                        &#215
+                    </label>
                 </nav>
             </div>
         </header>
