areglo en el responsive de Nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -35,7 +35,7 @@
         </header>
 
     
-        <main class="container nosotros">
+        <main class="nosotros">
             <ul>
                 <div class="empleados">
                     <h3>Nuestro equipo:</h3>
